<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading...</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="com_facebook_loginview_log_in_button">Log in</string>
    <string name="com_facebook_loginview_log_in_button_long">Log in with Facebook</string>
    <string name="com_facebook_loginview_log_out_action">Log out</string>
    <string name="com_facebook_loginview_log_out_button">Log out</string>
    <string name="com_facebook_loginview_logged_in_as">Logged in as: %1$s</string>
    <string name="com_facebook_loginview_logged_in_using_facebook">Logged in using Facebook</string>
    <string name="com_facebook_send_button_text">Send</string>
    <string name="com_facebook_share_button_text">Share</string>
    <string name="com_facebook_tooltip_default">"New! You're in control - choose what info you want to share with apps."</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"%1$s won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"%1$s won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="messenger_send_button_text">Send</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="about_mail_info">Service information that will help us to solve your problem</string>
    <string name="about_mail_subject">Review from Hotellook Android app</string>
    <string name="about_mail_title">Choose mail client</string>
    <string name="action_gallery_grid">grid</string>
    <string name="add_hotels_from_results">Add hotels from the search results</string>
    <string name="add_hotels_to_favorites">"Add favorite hotels here
and choose the best one later"</string>
    <string name="address_copied_to_clipboard">Address copied to clipboard</string>
    <string name="airports">Airports</string>
    <string name="all_beaches">Beaches</string>
    <string name="all_ski_lifts">Ski lifts</string>
    <string name="allways_hide_hostels_and_guesthouses">Always hide hostels and guesthouses</string>
    <string name="app_guide_finish">Close</string>
    <string name="app_name">Hotellook</string>
    <string name="apply">Apply</string>
    <string name="badge_beach">Beach</string>
    <string name="badge_business">Business</string>
    <string name="badge_in_center">Center</string>
    <string name="badge_kids">With kids</string>
    <string name="badge_low_cost">Budget</string>
    <string name="badge_lux">Lux</string>
    <string name="badge_optimal">Optimal</string>
    <string name="badge_popular">Popular</string>
    <string name="badge_romantic">Romantic</string>
    <string name="beaches">Beaches</string>
    <string name="best_offer_book">book now</string>
    <string name="best_offer_error_message">Failed to load prices</string>
    <string name="best_offer_header">Best price for %s</string>
    <string name="best_offer_new_search_message">Make a search to update prices</string>
    <string name="bn_favorite">Favorites</string>
    <string name="bn_profile">Profile</string>
    <string name="bn_search">Search</string>
    <string name="browser_backward">Back</string>
    <string name="browser_forward">Forward</string>
    <string name="browser_loading_agency">Contacting our partner %s</string>
    <string name="browser_place_holder_tip">One moment, please...</string>
    <string name="btn_update">UPDATE</string>
    <string name="btn_update_prices">update prices</string>
    <string name="calendar_day_name_format">EE</string>
    <string name="calendar_invalid_range">We are sorry, but the maximum hotel stay is limited to 30 days</string>
    <string name="calendar_month_name_format">MMMM yyyy</string>
    <string name="check_connection">Please check your internet connection</string>
    <string name="choose_name">Enter the hotel name</string>
    <string name="city">City:</string>
    <string name="city_center">City center</string>
    <string name="coordinates">Coordinates</string>
    <string name="currency_aed">United Arab Emirates dirham</string>
    <string name="currency_alert_message">Currency will be changed when you start your next search</string>
    <string name="currency_aud">Australian dollar</string>
    <string name="currency_brl">Brazilian Real</string>
    <string name="currency_byn">Belarusian ruble</string>
    <string name="currency_cad">Canadian dollar</string>
    <string name="currency_changed">Currency has been changed</string>
    <string name="currency_chf">Swiss Franc</string>
    <string name="currency_cny">Chinese yuan</string>
    <string name="discount_sorting">Discount</string>
    <string name="distance_from">Distance from:</string>
    <string name="en_gates_pref_tip">We will show you agencies with booking interface in English. Changes will take effect the next time you make a search.</string>
    <string name="filter_price">Price</string>
    <string name="from">from</string>
    <string name="global_settings">These settings will be applied to all future searches.</string>
    <string name="guest_ratings">Rating</string>
    <string name="info_item_allow_en_gates">Enable agencies with English interface</string>
    <string name="info_item_currency_select">Currency</string>
    <string name="info_item_feedback">Contact us</string>
    <string name="info_item_license">License</string>
    <string name="info_item_rate">Rate this app</string>
    <string name="info_item_social">Social media</string>
    <string name="kids_picker_apply">confirm</string>
    <string name="kp_add">Add</string>
    <string name="kp_add_kid">Add more</string>
    <string name="kp_cancel">Cancel</string>
    <string name="popularity">Popularity</string>
    <string name="price">Price</string>
    <string name="rate_dialog_bad_boy_mode_tip">Describe your issue:</string>
    <string name="rate_dialog_btn_not_now">not now</string>
    <string name="rate_dialog_btn_send">send</string>
    <string name="rate_dialog_high_five">High five!</string>
    <string name="rate_dialog_tip">We would really appreciate it if you could leave us a good review</string>
    <string name="rate_dialog_title">Do you like the app?</string>
    <string name="rate_dialog_to_google_play">on Google Play</string>
    <string name="sort_by">Sort by:</string>
    <string name="title_about_us">About us</string>
    <string name="to">to</string>
    <string name="tutorial_and_others">and many more</string>
    <string name="tutorial_start">Get started</string>
    <string name="tutorial_title">"The best hotel deals
from 80 booking agencies"</string>
    <string name="drawer_item_dev">Developer settings</string>
</resources>