<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.devspark.robototextview.widget.RobotoTextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="18.0dip" android:layout_marginRight="24.0dip" android:text="@string/rate_dialog_title" android:singleLine="true" style="@style/Dialog.Title" />
    <com.devspark.robototextview.widget.RobotoTextView android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="9.0dip" android:layout_marginRight="24.0dip" android:text="@string/rate_dialog_tip" android:lineSpacingExtra="4.0dip" style="@style/Dialog.Message" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RatingBar android:id="@id/stars" android:layout_width="163.0dip" android:layout_height="38.0dip" android:layout_marginTop="23.0dip" android:layout_centerHorizontal="true" style="@style/Info.RatingBar" />
        <RatingBar android:id="@id/dummy_stars" android:layout_width="163.0dip" android:layout_height="38.0dip" android:layout_marginTop="23.0dip" android:layout_centerHorizontal="true" android:alpha="0.0" style="@style/Info.RatingBar" />
        <com.devspark.robototextview.widget.RobotoTextView android:textSize="10.0dip" android:textColor="@color/gray_9E9E9E" android:id="@id/google_play" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginRight="24.0dip" android:text="@string/rate_dialog_to_google_play" android:layout_below="@id/stars" android:layout_alignParentRight="true" />
        <com.devspark.robototextview.widget.RobotoTextView android:textSize="10.0dip" android:textColor="@color/gray_9E9E9E" android:id="@id/high_five" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/rate_dialog_high_five" android:layout_below="@id/stars" android:layout_centerHorizontal="true" />
        <ImageView android:id="@id/arrow" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="0.0dip" android:layout_marginRight="6.0dip" android:src="@drawable/ic_rate_arrow" android:layout_below="@id/stars" android:layout_alignRight="@id/stars" />
        <com.devspark.robototextview.widget.RobotoTextView android:textSize="12.0dip" android:textColor="@color/gray_9C9C9C" android:id="@id/feedback_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="108.0dip" android:text="@string/rate_dialog_bad_boy_mode_tip" />
        <EditText android:textSize="12.0dip" android:textColor="@color/gray_717273" android:gravity="center_vertical" android:id="@id/feedback" android:background="@null" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:lines="1" android:layout_below="@id/feedback_tip" android:inputType="textCapSentences|textNoSuggestions" android:privateImeOptions="nm" android:textCursorDrawable="@drawable/edit_text_cursor_drawable" />
        <View android:id="@id/feedback_underline" android:background="@color/gray_747474" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="24.0dip" android:layout_marginTop="6.0dip" android:layout_marginRight="24.0dip" android:layout_below="@id/feedback" />
        <LinearLayout android:gravity="right" android:id="@id/controls" android:paddingBottom="14.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/rate_dialog_controls_margin" android:layout_marginRight="16.0dip" android:layout_below="@id/stars" android:layout_alignParentRight="true">
            <com.devspark.robototextview.widget.RobotoTextView android:id="@id/btn_not_now" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_dialog_btn_not_now" style="@style/Dialog.Button" />
            <com.devspark.robototextview.widget.RobotoTextView android:id="@id/btn_send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/rate_dialog_btn_send" style="@style/Dialog.Button" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>