<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/AppGuide.Container"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.devspark.robototextview.widget.RobotoTextView android:gravity="center" android:id="@id/title" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/tutorial_title" android:layout_above="@id/images" style="@style/AppGuide.Text.Title" />
    <RelativeLayout android:id="@id/images" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="24.0dip" android:layout_marginRight="24.0dip" android:layout_centerInParent="true">
        <ImageView android:id="@id/img_agencies" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_promo_agencies" android:layout_centerHorizontal="true" style="@style/AppGuide.Image.Agencies" />
        <ImageView android:id="@id/img_device" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/img_promo_device" android:layout_below="@id/img_agencies" android:layout_centerHorizontal="true" style="@style/AppGuide.Image.Device" />
        <com.devspark.robototextview.widget.RobotoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tutorial_and_others" android:layout_alignTop="@id/img_device" android:layout_centerInParent="true" style="@style/AppGuide.Text.OtherAgencies" />
    </RelativeLayout>
    <com.devspark.robototextview.widget.RobotoTextView android:id="@id/start_btn" android:text="@string/tutorial_start" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" style="@style/AppGuide.Button" />
</RelativeLayout>