<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/drawable_bkg_filter_card" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.devspark.robototextview.widget.RobotoTextView android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="16.0dip" android:layout_marginRight="26.0dip" android:text="@string/info_item_allow_en_gates" style="@style/Filters.Card.Title" />
    <com.devspark.robototextview.widget.RobotoTextView android:id="@id/tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="26.0dip" android:text="@string/en_gates_pref_tip" android:layout_below="@id/title" style="@style/Filters.Card.CountText" />
    <com.devspark.robototextview.widget.RobotoTextView android:gravity="center" android:layout_gravity="right" android:id="@id/apply_btn" android:background="@drawable/card_apply_btn" android:paddingLeft="16.0dip" android:paddingTop="4.0dip" android:paddingRight="16.0dip" android:layout_width="wrap_content" android:layout_height="@dimen/sorting_btn_height" android:layout_marginTop="10.0dip" android:text="@string/apply" android:layout_below="@id/tip" android:layout_alignParentRight="true" style="@style/Filter.Apply.Btn" />
    <ImageView android:id="@id/close" android:background="@drawable/card_apply_btn" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:layout_marginRight="6.0dip" android:src="@drawable/ic_cross" android:layout_alignParentRight="true" />
</RelativeLayout>